--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>mahjong_statboard</title>
   </head>
   <body>
