--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>mahjong_statboard</title>
+    <link rel="icon" type="image/png" href="/static/favicon.ico" />
+    <title>Рейтинг риичи-маджонг клуба "Тесудзи"</title>
   </head>
   <body>
     <div id="app"></div>
